# pulsusdb

./: .dockerignore  .gitignore  CHANGELOG.md  CODEREVIEWER.md  Cargo.toml  Dockerfile  Makefile  README.md  clippy.toml  codex.pid  docker-compose.yaml  otel-config.yaml
crates/pulsus-clickhouse/: Cargo.toml
crates/pulsus-clickhouse/src/: client.rs  config.rs  error.rs  lib.rs  pool.rs  settings.rs  tls.rs
crates/pulsus-clickhouse/tests/: live_clickhouse.rs  live_spreading.rs  live_tls.rs
crates/pulsus-model/: Cargo.toml
crates/pulsus-model/src/: canonical.rs  fingerprint.rs  float_histogram.rs  float_histogram_bounds.rs  float_histogram_kahan.rs  float_histogram_ops.rs  float_histogram_trim.rs  histogram.rs  labels.rs  lib.rs  matcher.rs  sample.rs  time.rs
crates/pulsus-model/tests/: golden.rs  live_cityhash.rs  live_intdiv.rs
crates/pulsus-model/tests/fixtures/: fingerprints.json
crates/pulsus-promql/: Cargo.toml
crates/pulsus-promql/src/: annotations.rs  error.rs  lib.rs  math.rs  parser.rs  plan.rs  value.rs
crates/pulsus-promql/src/eval/: aggregation.rs  binop.rs  datetime.rs  elementwise.rs  extended.rs  functions.rs  hist_range_fns.rs  histogram_fns.rs  info.rs  labels.rs  mod.rs  quote.rs  staleness.rs
crates/pulsus-promql/tests/: binop_range_alloc.rs  binop_range_bench.rs  function_coverage.rs  m2_subset_ast.rs  promqltest_corpus.rs  upstream_parser_corpus.rs
crates/pulsus-promql/tests/corpus/: PROVENANCE.md  expected-divergences.jsonl  extract-upstream-cases.py  manifest.json  prometheus-v3.13-parse-cases.jsonl
crates/pulsus-promql/tests/golden/: agg_avg_by.txt  agg_avg_without.txt  agg_bottomk_by.txt  agg_bottomk_without.txt  agg_count_by.txt  agg_count_without.txt  agg_max_by.txt  agg_max_without.txt  agg_min_by.txt  agg_min_without.txt  agg_sum_by.txt  agg_sum_without.txt  agg_topk_by.txt  agg_topk_without.txt  binop_vector_scalar_arith_plain.txt  binop_vector_scalar_cmp_bool.txt  binop_vector_scalar_cmp_plain.txt  binop_vector_vector_arith_ignoring.txt  binop_vector_vector_arith_on.txt  binop_vector_vector_arith_plain.txt  binop_vector_vector_cmp_bool.txt  binop_vector_vector_cmp_ignoring.txt  binop_vector_vector_cmp_on.txt  binop_vector_vector_cmp_plain.txt  histogram_quantile_basic.txt  matrix_selector_range.txt  offset_matrix_selector.txt  offset_vector_selector.txt  over_time_avg.txt  over_time_count.txt  over_time_max.txt  over_time_min.txt  over_time_sum.txt  precedence_add_then_mul.txt  precedence_mul_then_add.txt  precedence_neg_pow.txt  range_fn_delta.txt  range_fn_increase.txt  range_fn_irate.txt  range_fn_rate.txt  (+7 more)
crates/pulsus-promql/tests/promqltest/: fetch.rs  grammar.rs  histogram_literal.rs  mod.rs  nhcb.rs  runner.rs  series.rs  store.rs
crates/pulsus-read/: Cargo.toml
crates/pulsus-read/src/: eval_gate.rs  lib.rs  querytext.rs
crates/pulsus-read/src/logql/: detected.rs  error.rs  escape.rs  exec.rs  explain.rs  mod.rs  params.rs  pipeline.rs  plan.rs  rows.rs  sql.rs
crates/pulsus-read/src/metrics/: exec.rs  labels.rs  matcher.rs  mod.rs  refresh.rs  rows.rs  sample_rows.rs  sample_sql.rs  sql.rs  stats.rs
crates/pulsus-read/src/traces/: exec.rs  filter.rs  (+11 more)
crates/pulsus-read/tests/: compare_value_differential.rs  explain_indexes.rs  injection.rs  live_discovery_fallback.rs  live_metrics_cache.rs  live_metrics_cluster_fallback.rs  live_metrics_engine.rs  logql_metric_agg_golden.rs  logql_pipeline_alloc.rs  logql_pipeline_golden.rs  multi_metric_scan_alloc.rs  nestedset_value_differential.rs  patterns_explain.rs  query_log_gates.rs  query_text_cap_live.rs  rollup_differential.rs  series_stream_cap.rs  sql_snapshots.rs  traces_alloc_audit.rs  traces_graph_explain.rs  traces_graph_sql.rs  traces_metrics_explain.rs  traces_metrics_live.rs  traces_metrics_sql.rs  traces_point_read.rs  traces_search_explain.rs  traces_search_grouping_differential.rs  traces_search_heal_live.rs  traces_search_sql.rs  traces_tags_explain.rs
crates/pulsus-schema/: Cargo.toml
crates/pulsus-schema/src/: bookkeeping.rs  catalog.rs  controller.rs  error.rs  lib.rs  render.rs  rotation.rs
crates/pulsus-schema/tests/: live_cluster.rs  live_hist_schema.rs  live_schema.rs  live_traces.rs
crates/pulsus-server/: Cargo.toml  build.rs
crates/pulsus-server/src/: app.rs  azdetect.rs  chconfig.rs  compat.rs  ingest.rs  main.rs  middleware.rs  modes.rs  ops.rs  schema_init.rs  serve.rs  subsystems.rs  tls.rs
crates/pulsus-server/tests/: api_conformance.rs  live_server.rs  logs_api_live.rs  logs_detected_live.rs  logs_stats_live.rs  logs_tail_live.rs  logs_volume_live.rs  loki_push_live.rs  prom_api_live.rs  route_inventory.rs  tls_live.rs  traces_api_live.rs  traces_graph_live.rs  traces_search_live.rs  traces_tags_live.rs
crates/pulsus-write/: Cargo.toml
crates/pulsus-write/src/: error.rs  lib.rs  patterns.rs
crates/pulsus-write/tests/: cross_transport_parity.rs  ingest_fidelity.rs  live_log_stream_backfill.rs  live_metric_hist_writer.rs  live_metric_registration_backfill.rs  live_metric_writer.rs  live_remote_write_hist.rs  live_trace_attr_backfill.rs  log_patterns_alloc.rs  log_patterns_fidelity.rs  loki_decode_alloc.rs  loki_push_fixtures.rs  metric_writer.rs  otlp_depth_alloc.rs  otlp_json_equivalence.rs  otlp_json_unknown_alloc.rs  otlp_json_vendor_patch.rs  otlp_logs.rs  otlp_metrics_fixtures.rs  otlp_metrics_parse_alloc.rs  otlp_prescan_alloc.rs  remote_write_decode_alloc.rs  remote_write_fixtures.rs  trace_ingest_fidelity.rs  trace_ingest_roundtrip.rs  trace_writer.rs  writer.rs  zipkin_decode_alloc.rs  zipkin_ingest_roundtrip.rs
e2e/: Cargo.toml
e2e/src/: corpus.rs  engine.rs  harness.rs  logs.rs  logs_corpus.rs  logs_sm_corpus.rs  main.rs  metrics.rs  scenarios.rs  traces.rs  traces_corpus.rs
xtask/: Cargo.toml
xtask/docker/: docker-compose.ch.yml  gen-certs.sh
xtask/docker/config.d/: tls.xml
xtask/src/: main.rs
xtask/src/bench/: dataset.rs  mod.rs  queries.rs  query_log.rs  report.rs  traces_read.rs
xtask/src/ch_bench/: aggstate.rs  candidates.rs  ddl.rs  fetch.rs  insert.rs  mod.rs  pool.rs  rows.rs  tls.rs
(+792 files in other folders)
