[workspace]
resolver = "2"
members = ["crates/*", "xtask"]

[workspace.package]
edition = "2024"
license = "AGPL-3.0-only"
rust-version = "1.93"
repository = "https://github.com/digitalis-io/pulsusdb"
authors = ["PulsusDB contributors"]

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_norway = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "io-util", "net", "signal"] }
futures = "0.3"

# HTTP server stack (issue #6): axum/tower/tower-http for the router and its
# middleware layers, tracing/tracing-subscriber for structured logging driven
# by `PULSUS_LOG_LEVEL`, and the `metrics` facade + Prometheus exporter (not
# the bare `prometheus` crate) so every crate can emit via
# `metrics::counter!`/`histogram!` without depending on the server's registry.
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-gzip", "cors", "trace", "timeout", "validate-request"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }

# Winner of the M0 ClickHouse client spike (docs/decisions/0001-clickhouse-client.md):
# `clickhouse` (HTTP + RowBinary) — highest bulk insert throughput on both
# documented row shapes, and its own HTTP transport handles DDL/MV/backfill
# reliably, so a single crate suffices (no native-protocol client shipped).
clickhouse = { version = "0.15", features = ["rustls-tls-webpki-roots", "futures03"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pki-types = "1"
hyper-rustls = { version = "0.27", features = ["ring", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio", "http1"] }

# Winners of the M0 pulsus-model hashing spike (issue #4). `xxhash-rust`
# (metric fingerprints, `xxh64` feature) is unambiguous — there is no
# server-side bit-identity requirement for that primitive. For
# ClickHouse-bit-identical `cityHash64` (log/trace/profile fingerprints),
# `ch_cityhash102` was the only candidate (of `cityhasher`, `cityhash-rs`,
# `naive-cityhash`, `cityhash-102-rs`) that matched a live ClickHouse 24.8
# `SELECT cityHash64(unhex(...))` across the full length-class suite
# (0/1/3/4/7/8/15/16/17/31/32/33/63/64/65 bytes + multi-KB, boundary-
# straddling multi-label buffers, non-ASCII UTF-8) in *both* debug and
# release builds: `cityhasher` implements upstream CityHash 1.1 (fails
# immediately), and `naive-cityhash`/`cityhash-102-rs` panic on integer
# overflow under debug-assertions despite matching in release. No vendored
# port was needed.
xxhash-rust = { version = "0.8", features = ["xxh64"] }
ch_cityhash102 = "0.1"
serde_json = "1"
