[workspace]
resolver = "2"
members = ["crates/*", "xtask", "e2e"]

[workspace.package]
edition = "2024"
license = "AGPL-3.0-only"
rust-version = "1.93"
repository = "https://github.com/digitalis-io/pulsusdb"
authors = ["PulsusDB contributors"]

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_norway = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "io-util", "net", "signal"] }
futures = "0.3"

# HTTP server stack (issue #6): axum/tower/tower-http for the router and its
# middleware layers, tracing/tracing-subscriber for structured logging driven
# by `PULSUS_LOG_LEVEL`, and the `metrics` facade + Prometheus exporter (not
# the bare `prometheus` crate) so every crate can emit via
# `metrics::counter!`/`histogram!` without depending on the server's registry.
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-gzip", "cors", "trace", "timeout", "validate-request"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }

# Winner of the M0 ClickHouse client spike (docs/decisions/0001-clickhouse-client.md):
# `clickhouse` (HTTP + RowBinary) — highest bulk insert throughput on both
# documented row shapes, and its own HTTP transport handles DDL/MV/backfill
# reliably, so a single crate suffices (no native-protocol client shipped).
clickhouse = { version = "0.15", features = ["rustls-tls-webpki-roots", "futures03"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pki-types = "1"
hyper-rustls = { version = "0.27", features = ["ring", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio", "http1"] }

# Winners of the M0 pulsus-model hashing spike (issue #4). `xxhash-rust`
# (metric fingerprints, `xxh64` feature) is unambiguous — there is no
# server-side bit-identity requirement for that primitive. For
# ClickHouse-bit-identical `cityHash64` (log/trace/profile fingerprints),
# `ch_cityhash102` was the only candidate (of `cityhasher`, `cityhash-rs`,
# `naive-cityhash`, `cityhash-102-rs`) that matched a live ClickHouse 24.8
# `SELECT cityHash64(unhex(...))` across the full length-class suite
# (0/1/3/4/7/8/15/16/17/31/32/33/63/64/65 bytes + multi-KB, boundary-
# straddling multi-label buffers, non-ASCII UTF-8) in *both* debug and
# release builds: `cityhasher` implements upstream CityHash 1.1 (fails
# immediately), and `naive-cityhash`/`cityhash-102-rs` panic on integer
# overflow under debug-assertions despite matching in release. No vendored
# port was needed.
xxhash-rust = { version = "0.8", features = ["xxh64"] }
ch_cityhash102 = "0.1"
serde_json = "1"

# OTLP logs (issue #8) and metrics (issue #27) receivers. `opentelemetry-proto`
# supplies `prost`-generated OTLP message types with the transport/tonic
# runtime disabled (`default-features = false`, `gen-tonic-messages` +
# `logs` + `metrics` only) — no protoc in CI, no gRPC transport pulled in
# for what is a pure protobuf-decode + axum handler. Exact-pinned so a
# future `opentelemetry-proto` release cannot silently change wire-
# compatible message shapes underfoot; revisit vendoring only if version
# churn becomes a real problem (open question #1, resolved by
# task-manager). `bytes` and `prost` are `opentelemetry-proto`'s own
# message/codec types and this crate's own request-body buffer.
# `flate2`/`snap`/`zstd` back the hand-rolled gzip/snappy/zstd
# decompressors in `pulsus-write::ingest::decompress` — tower-http's
# compression layer covers gzip only, not snappy.
opentelemetry-proto = { version = "=0.32.0", default-features = false, features = [
    "gen-tonic-messages",
    "logs",
    "metrics",
] }
prost = "0.14"
bytes = "1"
flate2 = "1"
snap = "1"
zstd = "0.13"
# Plan amendment 3 (#8 code review): reads/caps the `/v1/logs` request body
# inside the handler via `BodyExt::frame`, bypassing axum's `DefaultBodyLimit`
# so the documented 64 MiB decompressed-size cap (not axum's 2 MiB default)
# is the sole bound. Already resolved in `Cargo.lock` via axum's own tree.
http-body-util = "0.1"

# M2 promql-parser validation spike (issue #29, docs/decisions/0002-promql-
# parser-selection.md). Exact-pinned (not a `"0.10"` range like most of this
# table): every number in ADR 0002 (corpus pass rate, divergence buckets,
# round-trip results) was measured against exactly this version, and a bump
# invalidates the spike's evidence until re-run (docs/architecture.md §5.1's
# "re-vendor on reference bump" rule). Dev-dependency only in
# `pulsus-promql` for this spike; #31 promotes it to a real dependency.
promql-parser = "=0.10.0"
# `sha2` backs the corpus integrity check in `upstream_parser_corpus.rs`
# (recomputes the vendored corpus's SHA-256 and asserts it against
# `manifest.json` before running any case).
sha2 = "0.10"
