[package]
name = "pulsus-clickhouse"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clickhouse.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["macros"] }
thiserror.workspace = true
futures.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
hyper-rustls.workspace = true
hyper-util.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
