[package]
name = "pulsus-model"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ch_cityhash102.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
xxhash-rust.workspace = true

[dev-dependencies]
clickhouse.workspace = true
futures.workspace = true
pulsus-clickhouse = { path = "../pulsus-clickhouse" }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
