[package]
name = "pulsus-promql"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# Promoted from [dev-dependencies] by issue #31 (was the #29 spike-only
# dependency, docs/decisions/0002-promql-parser-selection.md) — now the
# real parser this crate's `parser`/`plan` modules build on. Redirected to
# the vendored, patched copy via the workspace root's [patch.crates-io]
# (docs/decisions/0003-promql-parser-vendor-patch.md).
promql-parser.workspace = true
# `STALE_NAN_BITS`, `Fingerprint`, `LabelSet`, `LabelMatcher`/`MatchOp` — the
# matcher type lives here (not `pulsus-read`) specifically so both
# `pulsus-promql` and `pulsus-read` can depend on it without a cycle
# (`pulsus-model -> pulsus-promql -> pulsus-read`, issue #31 plan
# amendment §1).
pulsus-model = { path = "../pulsus-model" }
thiserror.workspace = true

[dev-dependencies]
# `regex` is test-only: the promqltest driver's synthetic store must apply
# `MatchOp::Re`/`Nre` with Prometheus's full anchoring (`^(?:pat)$`) when
# selecting loaded series — a mismatch would mis-select series and fake a
# corpus divergence (issue #64 plan, edge cases).
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
