[package]
name = "pulsus-promql"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# Promoted from [dev-dependencies] by issue #31 (was the #29 spike-only
# dependency, docs/decisions/0002-promql-parser-selection.md) — now the
# real parser this crate's `parser`/`plan` modules build on. Redirected to
# the vendored, patched copy via the workspace root's [patch.crates-io]
# (docs/decisions/0003-promql-parser-vendor-patch.md).
promql-parser.workspace = true
# `STALE_NAN_BITS`, `Fingerprint`, `LabelSet`, `LabelMatcher`/`MatchOp` — the
# matcher type lives here (not `pulsus-read`) specifically so both
# `pulsus-promql` and `pulsus-read` can depend on it without a cycle
# (`pulsus-model -> pulsus-promql -> pulsus-read`, issue #31 plan
# amendment §1).
pulsus-model = { path = "../pulsus-model" }
# Promoted from [dev-dependencies] by issue #68 (M6-05): `label_replace`
# needs upstream's exact `^(?s:regex)$` dot-all anchored matching +
# `$1`/`${name}` capture expansion in the evaluator itself (previously the
# promqltest driver's synthetic store was the only consumer, applying
# `MatchOp::Re`/`Nre` with Prometheus's full anchoring when selecting
# loaded series).
regex.workspace = true
thiserror.workspace = true
# Issue #69 (M6-06): `limit_ratio`'s deterministic per-series inclusion
# offset hashes the full label identity with xxh64 (seed 0) — the same
# workspace hash primitive `pulsus-model::metric_fingerprint` already
# uses.
xxhash-rust.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
