[package]
name = "pulsus-schema"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clickhouse.workspace = true
pulsus-clickhouse = { path = "../pulsus-clickhouse" }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "time", "rt"] }
xxhash-rust.workspace = true
serde.workspace = true
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
