[package]
name = "pulsus-server"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "pulsusdb"
path = "src/main.rs"

[dependencies]
axum.workspace = true
bytes.workspace = true
# RFC3339 timestamp parsing for `/api/logs/v1`'s `start`/`end`/`time` params
# (issue #13 architect plan interfaces: "else RFC3339 (chrono) ⇒ ns"); no
# other timestamp math in this binary needs it (elsewhere "now" is read via
# `std::time::SystemTime`, matching the rest of the workspace).
chrono = { version = "0.4", default-features = false, features = ["std"] }
clap.workspace = true
futures.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
pulsus-clickhouse = { path = "../pulsus-clickhouse" }
pulsus-config = { path = "../pulsus-config" }
pulsus-logql = { path = "../pulsus-logql" }
pulsus-read = { path = "../pulsus-read" }
pulsus-schema = { path = "../pulsus-schema" }
pulsus-write = { path = "../pulsus-write" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
# `pulsus_model::UnixNano` in `ingest.rs`'s `WriterSink` unit tests only
# (constructing a `LogRow` directly) — never referenced from production
# code, so this stays dev-only rather than pulling `pulsus-model` into the
# binary's real dependency graph.
pulsus-model = { path = "../pulsus-model" }
tower = { workspace = true, features = ["util"] }
# gzip-decodes `CompressionLayer` response bodies in the poll-after-end
# regression coverage for issue #24 — dev-only, never a runtime dependency
# (the server itself only ever *encodes* gzip, via tower-http).
flate2.workspace = true
