[package]
name = "pulsus-server"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "pulsusdb"
path = "src/main.rs"

[dependencies]
axum.workspace = true
bytes.workspace = true
# RFC3339 timestamp parsing for `/api/logs/v1`'s `start`/`end`/`time` params
# (issue #13 architect plan interfaces: "else RFC3339 (chrono) ⇒ ns"); no
# other timestamp math in this binary needs it (elsewhere "now" is read via
# `std::time::SystemTime`, matching the rest of the workspace).
chrono = { version = "0.4", default-features = false, features = ["std"] }
clap.workspace = true
futures.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
pulsus-clickhouse = { path = "../pulsus-clickhouse" }
pulsus-config = { path = "../pulsus-config" }
pulsus-logql = { path = "../pulsus-logql" }
# `prom_api` (issue #32) parses PromQL directly (`pulsus_promql::parse`)
# and reuses `pulsus_promql::plan`'s already-tested `__name__`-extraction
# for `match[]` selectors — mirrors `pulsus-logql`'s own role on the log
# query surface.
pulsus-promql = { path = "../pulsus-promql" }
pulsus-read = { path = "../pulsus-read" }
# `traces_api/search.rs` (issue #57) parses TraceQL (`pulsus_traceql::parse`)
# and hands the AST to `pulsus-read`'s search planner — mirrors
# `pulsus-logql`'s role on the log query surface.
pulsus-traceql = { path = "../pulsus-traceql" }
pulsus-schema = { path = "../pulsus-schema" }
pulsus-write = { path = "../pulsus-write" }
# `traces_api` (issue #55) decodes the stored per-span payloads as OTLP
# `TracesData` and encodes the assembled trace as protobuf
# (`prost::Message`) or OTLP-canonical protojson (the crate's `with-serde`
# serializers) — promoted from dev-only (#36's conformance fixtures) to
# real dependencies.
opentelemetry-proto.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
# `#[derive(clickhouse::Row)]` (via `pulsus_clickhouse::Row`) expands
# referencing the `clickhouse` crate name directly, so `tests/
# prom_api_live.rs`'s seed-row structs need it in scope even though
# `pulsus-clickhouse` already re-exports the derive itself — same
# dev-only precedent as `pulsus-read`'s own live tests
# (`clickhouse.workspace = true` there too).
clickhouse.workspace = true
# `pulsus_model::UnixNano` in `ingest.rs`'s `WriterSink` unit tests only
# (constructing a `LogRow` directly) — never referenced from production
# code, so this stays dev-only rather than pulling `pulsus-model` into the
# binary's real dependency graph.
pulsus-model = { path = "../pulsus-model" }
tower = { workspace = true, features = ["util"] }
# gzip-decodes `CompressionLayer` response bodies in the poll-after-end
# regression coverage for issue #24 — dev-only, never a runtime dependency
# (the server itself only ever *encodes* gzip, via tower-http).
flate2.workspace = true
# Issue #36: `tests/api_conformance.rs` snappy-compresses
# `prompb.WriteRequest` bodies for `/api/v1/write` (its OTLP protobuf
# fixtures use the `opentelemetry-proto`/`prost` real dependencies above,
# promoted from dev-only by issue #55's trace-fetch assembly).
snap.workspace = true
